# calivision

./: .flake8  .gitattributes  .gitignore  README.md  app.py  pyproject.toml
app/: action_prediction.py  app.py  pose_estimation.py
app/routes/: __init__.py  data_routes.py  index_routes.py  main_routes.py  visualization_routes.py
app/static/css/: styles.css
app/templates/: index.html  process_data.html  visualize_angles.html  visualize_fourier.html  visualize_joints.html  visualize_predictions.html
dataset/info/: daniel.json
models/: UCF101_lstm_angles_model.pth  UCF101_lstm_joints_model.pth  daniel_knn_angles_model.pth  daniel_lstm_angles_model.pth
notebooks/: extract_features.ipynb  process_video.ipynb  test_model.ipynb  visualize_features.ipynb
notebooks/cache/: angle_series.pickle  fourier_series.pickle  joint_series.pickle  video_processor.pickle
src/data/: __init__.py  get_dataset_info.py  load_dataset.py  make_dataset.py
src/distance_metrics/: __init__.py  distance_metric.py  dtw.py  emd.py  l1.py  l2.py  lcss.py
src/features/: __init__.py  compute_angles.py  extract_joints.py  fourier_transform.py  joints_data.yaml
src/models/: __init__.py  knn.py  lstm.py  model.py  train_model.py
src/utils/: __init__.py  misc.py
src/video_processing/: __init__.py  estimate_pose.py  process_video.py
templates/: angle_visualization.html  data_processing_options.html  explore_processed_data.html  fourier_visualization.html  index.html  joint_visualization.html  process_data_series.html  visualize_angles.html  visualize_fourier.html  visualize_joints.html
(+768 files in other folders)
