[tool.poetry]
name = "calivision"
version = "0.0.0"
description = "Using computer vision and machine learning for calisthenics exercise video classification"
authors = ["Daniel Altunay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
h5py = "^3.9.0"
ipykernel = "^6.25.1"
jupyter = "^1.0.0"
llvmlite = "^0.40.1"
mediapipe = "^0.10.3"
numba = "^0.57.1"
opencv-python = "^4.8.0.76"
pandas = "^2.0.3"
plotly = "^5.16.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
seaborn = "^0.12.2"
torch = "^2.0.1"
tqdm = "^4.66.1"
tslearn = "^0.6.1"
tsmoothie = "^1.0.4"

[tool.poetry.dev-dependencies]
black ="^23.7.0"
docformatter = "^1.7.5"
flake8-black = "^0.3.6"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.docformatter]
in-place = true
recursive = true
wrap-summaries = 99
